src/test/deca/context/invalid/provided/testprintfloat.deca

{int x = 2;
int y = readfloat();
println(y);
}

/*  Commentaire  */
